fix overflow

--- a/css/layout/layout.scss
+++ b/css/layout/layout.scss
@@ -31,8 +31,11 @@ p {
 }
 
 .wrapper {
-  height: 100%;
   position: relative;
+  width: 100%;
+  min-width: 940px + 20px;
+  min-height: 100%;
+  overflow: hidden;
 }
 
 .section {
